The blurry OCCRP thumb fixed

--- a/assets/styles/screen.css
+++ b/assets/styles/screen.css
@@ -19,7 +19,7 @@ a img { border: none; }
 article, aside, details, figcaption, figure, footer, header, hgroup, main, menu, nav, section, summary { display: block; }
 
 /* No files to import found in settings/* */
-html body { font-size: 100%; line-height: 1.25; color: #1a1a1a; background-color: #f9f9f9; font-family: "Europa", sans-serif; font-weight: 300; background-image: url('/assets/images/subtle-dots.png?1411285851'); }
+html body { font-size: 100%; line-height: 1.25; color: #1a1a1a; background-color: #f9f9f9; font-family: "Europa", sans-serif; font-weight: 300; background-image: url('http://metamn.github.io/its-csongor/assets/images/subtle-dots.png?1411294095'); }
 @media only screen and (min-width: 64em) { html body { font-size: 125%; line-height: 1.56; } }
 @media only screen and (min-width: 90em) { html body { font-size: 150%; line-height: 1.56; } }
 html body a { color: #1a1a1a; background-color: #f9f9f9; text-decoration: none; }
@@ -38,7 +38,7 @@ html.frontpage body #featured-image article aside p + p { margin-top: 1.56em; }
   html.frontpage body #featured-image article figure img { max-width: 100%; height: auto; }
   html.frontpage body #featured-image article figure img { max-width: none; }
   html.frontpage body #featured-image article figure figcaption { display: none; } }
-html.frontpage body #about { display: -webkit-box; /* OLD - iOS 6-, Safari 3.1-6 */ display: -moz-box; /* OLD - Firefox 19- (buggy but mostly works) */ display: -ms-flexbox; /* TWEENER - IE 10 */ display: -webkit-flex; /* NEW - Chrome */ display: flex; /* NEW, Spec - Opera 12.1, Firefox 20+ */ -webkit-box-pack: center; -ms-flex-pack: center; -webkit-justify-content: center; -moz-justify-content: center; justify-content: center; color: #f9f9f9; background-color: #1a1a1a; background-image: url('/assets/images/binding-dark.png?1411286397'); padding: 6.24em 1.56em; }
+html.frontpage body #about { display: -webkit-box; /* OLD - iOS 6-, Safari 3.1-6 */ display: -moz-box; /* OLD - Firefox 19- (buggy but mostly works) */ display: -ms-flexbox; /* TWEENER - IE 10 */ display: -webkit-flex; /* NEW - Chrome */ display: flex; /* NEW, Spec - Opera 12.1, Firefox 20+ */ -webkit-box-pack: center; -ms-flex-pack: center; -webkit-justify-content: center; -moz-justify-content: center; justify-content: center; color: #f9f9f9; background-color: #1a1a1a; background-image: url('http://metamn.github.io/its-csongor/assets/images/binding-dark.png?1411294095'); padding: 6.24em 1.56em; }
 html.frontpage body #about article { max-width: 39em; }
 html.frontpage body #about article p + p { margin-top: 1.56em; }
 html.frontpage body #about article p { font-family: "Europa", sans-serif; font-weight: 300; font-size: 1.6154em; }
